Add model for images

--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,8 @@ pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
+pillow==9.1.1
+    # via -r requirements.in
 prompt-toolkit==3.0.29
     # via ipython
 psycopg2==2.9.3
