--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,10 @@ django==4.0.5
     # via
     #   -r requirements.in
     #   django-extensions
+    #   djangorestframework
 django-extensions==3.1.5
+    # via -r requirements.in
+djangorestframework==3.13.1
     # via -r requirements.in
 executing==0.8.3
     # via stack-data
@@ -84,6 +87,8 @@ python-dateutil==2.8.2
     # via faker
 python-dotenv==0.20.0
     # via -r requirements.in
+pytz==2022.1
+    # via djangorestframework
 six==1.16.0
     # via
     #   asttokens
