--- a/requirements.txt
+++ b/requirements.txt
@@ -19,8 +19,11 @@ decorator==5.1.1
 django==4.0.5
     # via
     #   -r requirements.in
+    #   django-admin-sortable2
     #   django-extensions
     #   djangorestframework
+django-admin-sortable2==2.1
+    # via -r requirements.in
 django-extensions==3.1.5
     # via -r requirements.in
 djangorestframework==3.13.1
