--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,8 @@ django-admin-sortable2==2.1
     # via -r requirements.in
 django-extensions==3.1.5
     # via -r requirements.in
+django-tinymce==3.4.0
+    # via -r requirements.in
 djangorestframework==3.13.1
     # via -r requirements.in
 executing==0.8.3
