--- a/src/app/.env.ci
+++ b/src/app/.env.ci
@@ -1,5 +1,7 @@
 DEBUG = 1
 
+ALLOWED_HOSTS='["*"]'
+DATABASE_URL=sqlite:////tmp/backend.sqlite
 SECRET_KEY="v3rys3cr3tk3y"
 STATIC_URL="/static/"
 STATIC_ROOT="static/"
